@@ -60,5 +60,59 @@ std::ostream& operator<<(std::ostream& str, Quartz::ConfigV1::Mirroring enval) {
   }
   return str << val;
 }
+
+ConfigV2::~ConfigV2() {}
+
+std::ostream& operator<<(std::ostream& str, Quartz::ConfigV2::Depth enval) {
+  const char* val;
+  switch (enval) {
+  case Quartz::ConfigV2::Eight_bit:
+    val = "Eight_bit";
+    break;
+  case Quartz::ConfigV2::Ten_bit:
+    val = "Ten_bit";
+    break;
+  default:
+    return str << "Depth(" << int(enval) << ")";
+  }
+  return str << val;
+}
+std::ostream& operator<<(std::ostream& str, Quartz::ConfigV2::Binning enval) {
+  const char* val;
+  switch (enval) {
+  case Quartz::ConfigV2::x1:
+    val = "x1";
+    break;
+  case Quartz::ConfigV2::x2:
+    val = "x2";
+    break;
+  case Quartz::ConfigV2::x4:
+    val = "x4";
+    break;
+  default:
+    return str << "Binning(" << int(enval) << ")";
+  }
+  return str << val;
+}
+std::ostream& operator<<(std::ostream& str, Quartz::ConfigV2::Mirroring enval) {
+  const char* val;
+  switch (enval) {
+  case Quartz::ConfigV2::None:
+    val = "None";
+    break;
+  case Quartz::ConfigV2::HFlip:
+    val = "HFlip";
+    break;
+  case Quartz::ConfigV2::VFlip:
+    val = "VFlip";
+    break;
+  case Quartz::ConfigV2::HVFlip:
+    val = "HVFlip";
+    break;
+  default:
+    return str << "Mirroring(" << int(enval) << ")";
+  }
+  return str << val;
+}
 } // namespace Quartz
 } // namespace Psana
